Whoops!  All of spring 2016S committed in one swell foop.

--- a/outlines/admin/02.md
+++ b/outlines/admin/02.md
@@ -1,16 +1,33 @@
-* I'm going to put you in teams of about three students for the first half
-  of class.  Be prepared to move!
-* Sorry for any confusion about submission and such.  I'm still working on
-  mastering a new teaching platform and style and finding time to get everying
-  in place.
-    * Work that I see gets submitted via email: Journals, 
-      Code (after autograder)
-    * Due dates are in UTC!
-* There were some concerns about the autograders.  We'll consider those
-  during class time.
-* This week's "transition hiccup": The RSpec files for HW1 did not seem to
-  work under the Ruby and RSpec on Cloud 9.  I've forked the assignment
-  files and the new version seems to be working okay.
-* I misread my schedule for today, and did not have a chance to read all of
-  your homeworks and reflections.  I'll work from what I read, and encourage
-  you to also discuss/ask further.
+* Welcome to CSC 321!
+* I'll be taking attendance for the first week or so, since I'm *really*
+  bad at learning student names.
+* I'm working on getting the other Web sites for the class set up.  I'll 
+  let you know as soon as I do.
+* Our book says to use Bitbucket, but I'm comfortable using Github, and
+  you'll find that the instructions work more or less the same. You can
+  use whichever you'd like.
+
+### Upcoming Work
+
+* For Friday: Finish Chapter 1 of Hartl (including all construction).
+* 8pm Thursday: Reading Journal on Hartl, Chapter 1
+    * Message subject: CSC 321 Journal 3 (Your Name)
+    * What, in your own words, is the MVC framework?  Why do programmers
+      use such a framework?
+    * Which task was the most difficult for you to complete?  What instructions
+      would have helped you get through that task faster?
+    * If you wanted `https://yoursite.c9users.io/goodbye` to show the
+      text "Thanks for Visiting", what steps would you do?
+    * What is something you found particularly confusing or puzzling in
+      the reading?
+
+### Good Things to Do
+
+#### Academic
+
+* Convo Thursday!
+* CS Extras Thursday!
+
+#### Peer
+
+* Track meet on February 6.
