--- a/outlines/admin/03.md
+++ b/outlines/admin/03.md
@@ -1,6 +1,31 @@
-* I'm going to put you in teams of about three students for the first half
-  of class.  Be prepared to move!
-* My "sanity plans" are failing in two ways: I'm not limiting my work as
-  much as I should be and I'm also not getting everything updated as
-  much as it should.  Expect to see the due dates get fixed on the
-  Edge site in a day or so.
+* I was having trouble running Rails on C9 this morning.  Let's hope 
+  that things are working better.  (My attempt to run Rails reasonably
+  on MathLAN failed.)
+* Attendance.
+* Friday PSA.
+
+### Upcoming Work
+
+* For Monday: Finish Chapter 2 of Hartl (including all construction).
+    * Send me an invitation to your c9 repository.
+* For Monday: Reading Journal
+    * Message subject: CSC 321 Journal for Day 4 (Your Name)
+    * What do you see as the advantages and disadvantages of using
+      scaffolding?
+    * Pick three files created by the scaffold command (ones that Hartl
+      doesn't describe) and do your best to describe them.
+    * What is something you found particularly confusing or puzzling in
+      the reading?
+* For Wednesday (start early):
+    * SaaSbbok: Chapter 1 and sections 10.1-10.2, 7.1, 7.3-7.4 
+
+### Good Things to Do
+
+#### Academic
+
+* CS Table Tuesday.  (Facebook)
+* CS Extras Thursday.  (LaTeX)
+
+#### Peer
+
+* Track meet on February 6.
