--- a/outlines/admin/05.md
+++ b/outlines/admin/05.md
@@ -1,10 +1,25 @@
-* We are continuing to hit transition problems.  I'll do my best to
-  help you work through them.
-    * We'll work through the rest of HW2 in class today.
-    * I have time reserved on Saturday to work through the new Chapter 7 
-      examples (hopefully in advance of when you'll be doing them).
-* We will be temporarily skipping over chapters 5 and 6 to move on to BDD.
-    * Because we have a half class, we may not come back to chapter 6.
-* No matter what it says online, your next homework is at
-  <https://github.com/saasbook/hw-bdd-tdd-cycle>.  When cloning, clone
-  `hw-bdd-tdd-cycle`, not `bdd-tdd-cycle.`
+* Please sign up for the EdX class at
+  <https://edge.edx.org/courses/course-v1:GrinnellCollege+CS321-1-S16a+2016_Spring/about>
+* Reminders
+    * Attendance is required
+    * Journals are required (except when they are not assigned)
+
+### Upcoming Work
+
+* NO READING JOURNAL FOR FRIDAY.
+* No need to do quizzes etc. on EdX site.
+* For Friday: Finish the chapter 3 project.
+* For Friday: SaaSbook chapter 3 (or corresponding videos on EdX site).
+* For Friday: Hartl chapter 4 (which has almost no programming)
+
+### Good Things to Do
+
+#### Academic
+
+* CS Extras Thursday.  (LaTeX)
+* CS Table Tuesday.  (Bowie, Mickey, and ...)
+* Various internship workshops
+
+#### Peer
+
+* Track meet on February 6.
