--- a/outlines/admin/09.md
+++ b/outlines/admin/09.md
@@ -1,11 +1,34 @@
-* You might enjoy reading this article: 
-  <http://www.pgbovine.net/command-line-bullshittery.htm>.
-* The second half of our EdX course is at
-  <https://edge.edx.org/courses/course-v1:GrinnellCollege+CS321-1-F15b+2015_Fall/about>
-    * Dates and some assignments still have to be updated.
-* For next week:
-    * Reading: Chapter 5.
-    * Programming: <https://github.com/saasbook/hw-oracle-of-bacon>
-    * Partners tonight.
-* There were a lot of problems on today's assignment, so we'll spend some 
-  time going through it today.
+* 13 hours with alums was a bit overwhelming yesterday and I'm a bit behind.
+* Friday PSA.
+
+### Upcoming Work
+
+* SaaSBook 7 for Monday.
+    * Yes, I will ask you about your experience watching videos.
+* Reading Journal for Monday (due Sunday at 8pm)
+    * Subject: Reading Journal for Class 10 (Your Name)
+    * Explain in  your own words: Velocity, spike.
+    * What is the most important thing you learned about cucumber as a tool for behavior-driven development?
+    * What is the biggest difference betwen the agile approach to requirements and the plan-and-document approach to requirements?
+    * Which of the BDD pitfalls do you think you or your team will have to be most careful about? Why?
+    * Do you have any questions you need to resolve before you use cucumber and BDD? If so, what are they?
+    * Citation: Questions are based on journal questions from JLND.
+
+### Good Things to Do
+
+#### Academic
+
+* Thursday convo: Hilary Mason '00
+* Thursday extra: Hilary Mason '00
+* Thursday post-extra ACM meeting (?)
+
+#### Peer
+
+* Track Saturday!
+
+#### Miscellaneous
+
+* High School Large Group Speech Presentations Saturday at 6:30 p.m.
+  at the high-school auditorium.  Sam will reimburse you for the $5 entry
+  fee (or give it to you in advance).
+
