--- a/outlines/admin/11.md
+++ b/outlines/admin/11.md
@@ -1,19 +1,28 @@
-* Guest lecturer: S.S.S.  Since I was already filling in for Rebelsky in
-  CSC 301 and regularly serve as a professional algorithm consultant,
-  Rebelsky thought I should also lead today's discusison.
-* Rebelsky apologizes for missing class last week.  (He was out of it 
-  enough that he slept from 9am to 5pm and then again from 9pm to 7am.)
-* Rebelsky also apologizes for screwing up the Web site again and again
-  and again.  He clearly needs to think more about professional 
-  responsibilities.
-* Your assignment for the coming week: 
-    * The essay in the week 10 thing.  (The due dates are now updated.)
-      (This is individual work.)
-    * Read Chapter 9.
-    * Legacy HW 1 is due the Tuesday after Turkey break.  You should start
-      it this coming week.
-    * Partners: SZ&AM, HD&EG, ZW&RJ, AH&DK, LG&NS, RG&TD, EB&DC,
-      MO&ZC, BC&AO, EE&AD.
-* Folks affected by Rebelsky's lack of updates
-    * Slightly confused: BC, EE, EG, LG, RG, AH, AO, NS
-    * Very confused: EB, DC, ZC, TD, AD, RJ, DK, AM, MO, ZW, SZ
+### Upcoming Work
+
+* SaaSBook 8 for Friday.
+* Reading Journal for Friday (due Thursday at 8pm)
+    * Subject: Reading Journal for Class 12 (Your Name)
+    * How does Fox and Patterson's presentation of test-driven development 
+      compare to your prior experiences with unit testing?
+    * Choose the most confusing idea from 8.2 - 8.6. Make a serious attempt 
+      to explain this idea in your own words. What questions remain?
+    * Choose the most confusing idea from 8.7 - 8.9. Make a serious attempt 
+      to explain this idea in your own words. What questions remain?
+    * What do you see as the relationship(s) between BDD and TDD?  Which
+      do you prefer?
+    * What do you see as the most important or enduring concept in this 
+      chapter overall?
+    * Citation: Questions are based on journal questions from JLND.
+
+### Good Things to Do
+
+#### Academic
+
+* Misc. department stuff
+* Thursday convo: Hilary Mason '00
+* Thursday extra: Hilary Mason '00
+
+#### Peer
+
+* Track meet somewhere in Iowa.
