--- a/outlines/admin/14.md
+++ b/outlines/admin/14.md
@@ -1,3 +1,22 @@
-* Happy last day of class!
-* Today is mostly focused on debriefing.
-* You are expected to show up to the final next Thursday at 2pm.
+### Upcoming Work
+
+* SaaSbook 9 for Friday.
+* Reading Journal for Friday (due Thursday at 8pm)
+    * Subject: Reading Journal for Class 15 (Your Name)
+    * How does the description of Software Mainenance reflect your own expectations or experiences about such issues?  What was familiar?  What was surprising?
+    * What is the most important thing you learned from Chapter 9, Software Maintenance (textbook or videos)?
+    * What was the muddiest point from this week's material? Explain that idea in your own words as best you can.
+    * These questions were inspired by the work of JLND.
+
+### Good Things to Do
+
+#### Academic
+
+* Town Hall, Tonight 7:30 pm JRC 101
+* CS Extras Thursday (?)
+* GCStuACM after CS Extra
+
+#### Peer
+
+* SGA Meeting tonight!
+
