--- a/outlines/admin/06.md
+++ b/outlines/admin/06.md
@@ -1,13 +1,49 @@
-* We are continuing to hit transition problems.  I'll do my best to
-  help you work through them.
-    * We'll work through the rest of HW2 in class today.
-    * I have time reserved on Saturday to work through the new Chapter 7 
-      examples (hopefully in advance of when you'll be doing them).
-* We will be temporarily skipping over chapters 5 and 6 to move on to BDD.
-    * Because we have a half class, we may not come back to chapter 6.
-* No matter what it says online, your homework is at
-  <https://github.com/saasbook/hw-bdd-cucumber>.  (Agh!  I gave you the
-  wrong one for this week.)
-* You will also be doing some readings on computer ethics for next
-  class.  Expect an email about that tonight (although I think I've 
-  gotten it into the site for now).
+* The Registrar's office wants me to remind you that today is the
+  add/drop deadline.  (Yes, we've moved it forward a week.  Don't
+  blame me)
+* Friday PSA.
+
+### Upcoming Work
+
+* Reading Journal for Monday
+    * You have now read three different introductions to Ruby (the Codecademy
+      course, the SaaSbook, and Hartl).  What do you see as the major 
+      differences between the approaches?  What approach do you find
+      most compelling?
+    * Now that you've seen a broader introduction to Ruby, what do you
+      consider the most exciting aspects of working with Ruby?
+    * What aspect of Ruby confused you the most? Try to explain it in 
+      your own words.
+* For Monday: Finish the chapter 3 project.  Send me a link to your GitHub
+  repo.
+* For Monday: Skim Hartl 4 and do any setup you consider necessary.
+* For Wednesday: SaaSBook 2 and 4.
+
+### Good Things to Do
+
+#### Academic
+
+* Africans vs African Americans, Noon, Saturday, JRC 101.
+* Franz Schubert's Winterreise, Sunday, 2 p.m. Sebring-Lewis
+* Next week's Rosenfield Symposium on Campaign Finance Reform.
+* Monday, February 8, 4:15 p.m. in Bucksbaum Miriam Langer enjoins you to 
+  "Do Your Work in Public" 
+  (part of the series "Digital in Public: Intellectual and Technical Skills 
+  for Making a Difference")
+* Monday, February 8, 7:30-9:00, JRC 101: The Complex Relation Between 
+  Alcohol and Sexual Assault
+* Noon Tuesday in the White PDR: Bowie, Mickey, and the NFL: Copyright in
+  the 21st century (copies of the reading outside Sam's office)
+* 7:30 pm next Tuesday in ARH 131 - Funding for unfunded internships
+* Anything in next week's Carnival and Creativity series
+
+#### Peer
+
+* Track and Field Grinnell Invite February 6. (10 a.m.)
+
+#### Other
+
+* Social Dance Workshop Tuesdays 7:00-8:00 in Bucksbaum Dance Studio
+  (starting next week)
+* Fill out the Disability Student Space Survey
+  <https://docs.google.com/forms/d/1hIXOjkd1j9goBgoWoDv2EiZu8vhhETOZS3bDTcKypLE/viewform?usp=send_form>
