--- a/outlines/admin/08.md
+++ b/outlines/admin/08.md
@@ -1,10 +1,38 @@
-* Welcome back!  I hope you had a good break.
-* Most of you seem to have done the reading journals for this week,
-  but not necessarily the programming assignment.  We'll probably use
-  the second half of class for you to make progress on the programming
-  assignment.
-* I don't seem to have the second half of the course up yet; I'm waiting
-  for the folks at EdX to post it.  
-    * Reading: Chapter 5.
-    * Programming: <https://github.com/saasbook/hw-oracle-of-bacon>
-    * Partners tonight.
+* The temporary demise of MathLAN has put me a bit behind.  I apologize.
+* CSC 322 students are invited to lunch and dinner with our visitors tomorrow.
+* CSC 321-only students can join us for lunch and can come to the first hour 
+  of CSC 322.
+
+### Upcoming Work
+
+* SaaSBook 2 and 4 (including videos).
+    * Yes, I will ask you about your experience watching videos.
+* Reading Journal for Friday (due Thursday at 8pm)
+    * Subject: Reading Journal for Class 9 (Your Name)
+    * What was the most familiar idea you found in the Chapter 2 material? 
+      Where have you seen that idea (or a similar idea) before?  
+    * What is the most important thing you learned in the Chapter 2 material? 
+      Explain it in your own words.
+    * Choose an idea you found confusing and do your best to explain it 
+      in your own words.
+    * Credit: Questions are based on journal questions from JLND.
+
+### Good Things to Do
+
+#### Academic
+
+* Rosenfield Symposium on Campaign Finance.
+* Anything in this week's Carnival and Creativity series
+* Thursday extra: Learning from Alumni
+* Thursday post-extra ACM meeting
+
+#### Peer
+
+* Track Saturday!
+
+#### Miscellaneous
+
+* High School Large Group Speech Presentations Saturday at 6:30 p.m.
+  at the high-school auditorium.  Sam will reimburse you for the $5 entry
+  fee (or give it to you in advance).
+
