First version for Fall 2016

--- a/outlines/admin/01.md
+++ b/outlines/admin/01.md
@@ -1,19 +1,6 @@
-* Welcome to CSC 321!
-* I'll be taking attendance for the first week or so, since I'm *really*
-  bad at learning student names.
-* I'm working on getting the other Web sites for the class set up.  I'll 
-  let you know as soon as I do.
-
-Upcoming Work
-
-* ASAP: Finish the Ruby Tutorial.
-* 8pm Tuesday: Reading Journal on the Ruby Tutorial
-    * Message subject: CSC 321 Journal 2 (Your Name)
-    * What's something familiar you discovered about Ruby?
-    * What's something new and exciting that you discovered about Ruby?
-    * How does Ruby handle a programmer's need for multiple inheritance?
-    * What is something you found particularly confusing or puzzling in
-      the reading?
-* For Wednesday: Make sure you've signed up for the fifteen or so services
-  indicated in the email.
-* For Wednesday: Skim Hartl, Chapter 1
+* Welcome back!  I think I know most of you, and I'm happy to be able to
+  teach you again.
+* It's Friday.  Please behave responsibly this weekend.
+* CS Table Tuesday!
+* Homework: Codecademy Ruby Tutorial for Monday, EdX Ruby Exercises
+  for Wednesday.  (Details forthcoming in email.)
